# GreenhouseController

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
esphome/: moist.h  serra-up-brain.yaml  serra-up-cam.yaml  serra-up-cam2.yaml
main/: CMakeLists.txt  Configuration.cpp  Dht11.cpp  Dht11.h  GreenhouseController.c  Mqtt.cpp  MqttConfigurationMessage.cpp  MqttSensorConfigurationMessage.cpp  MqttSwitchConfigurationMessage.cpp  Sensor.cpp  Sensor.h  SensorSetting.cpp  SensorSetting.h  Settings.cpp  Settings.h  webServer.cpp  wifi.cpp  wifi.h
main/include/: AutoConfigurationTopic.h  Configuration.h  Dht11.h  GroupSignals.h  Mqtt.h  MqttConfigurationMessage.h  MqttSensorConfigurationMessage.h  MqttSwitchConfigurationMessage.h  Sensor.h  SensorSetting.h  SensorType.h  Settings.h  SubscribingTopic.h  webServer.h
main/sensor/: Bistable.cpp  Dht11.cpp  Monostable.cpp  Switch.cpp
main/sensor/include/: Bistable.h  Dht11.h  Monostable.h  Switch.h
schematic/GreenHouseController/: GreenHouseController.kicad_prl  GreenHouseController.kicad_pro  GreenHouseController.kicad_sch
sensors/moist/moist/: #auto_saved_files#  .gitignore  moist.kicad_prl  moist.kicad_pro  moist.kicad_sch
sensors/moist/src/: moist.cpp
