idf_component_register(SRCS
        "GreenhouseController.c"
        "wifi.cpp"
        "Settings.cpp"
        "sensor/Dht11.cpp"
        "sensor/Bistable.cpp"
        "Sensor.cpp"
        "SensorSetting.cpp"
        "Mqtt.cpp"
        "MqttSensorConfigurationMessage.cpp"
        "MqttSwitchConfigurationMessage.cpp"
    INCLUDE_DIRS "")
